Criado eventos para realizar testes

--- a/victory-scout.html
+++ b/victory-scout.html
@@ -595,7 +595,7 @@
                 interceptions.textContent = objStats["DISPUTA - INTERCEPTACAO"] ? objStats["DISPUTA - INTERCEPTACAO"] : 0;
                 turnover.textContent = "0";
                 foulsMade.textContent = objStats["DISPUTA - FALTA COMETIDA"] ? objStats["DISPUTA - FALTA COMETIDA"] : 0;
-                foulsSuffered.textContent = objStats["DRIBLE - FALTA SOFRIDA"] ? objStats["DRIBLE - FALTA SOFRIDA"] : 0;
+                foulsSuffered.textContent = objStats["DRIBLE - SOFREU FALTA"] ? objStats["DRIBLE - SOFREU FALTA"] : 0;
                 yellowCard.textContent = "0";
                 redCard.textContent = "0"
             };
