--- a/victory-scout.html
+++ b/victory-scout.html
@@ -336,6 +336,15 @@
             </div>
 
         </div>
+         <!-- Field stats container-->
+         <div id="field -stats-container" class="vw-95 m-1 mx-auto">
+            <h3 id="field-stats-text" class="text-center bg-primary text-light m-1" data-bs-toggle="collapse"
+                data-bs-target="#field-stats-container">Setores do Campo</h3>
+            <div id="field-stats-container" class="collapse">
+                
+            </div>
+
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
